--- a/backendapi/.env.example
+++ b/backendapi/.env.example
@@ -5,6 +5,14 @@ MODEL_MODULE=app.sample_model
 MODEL_CALLABLE=predict_image_bytes
 MODEL_VERSION=demo-v1
 MAX_IMAGE_BYTES=5242880
+MAX_IMAGE_COUNT=4
+MIN_IMAGE_WIDTH=224
+MIN_IMAGE_HEIGHT=224
+MAX_IMAGE_DIMENSION=4096
+MIN_BRIGHTNESS_MEAN=12
+MAX_BRIGHTNESS_MEAN=245
+MIN_EDGE_INTENSITY=6.0
+MAX_SCORE_DISAGREEMENT=0.35
 INFERENCE_TIMEOUT_SECONDS=10
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
