--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.96.0",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "framer-motion": "^11.11.17",
