--- a/backendapi/.env.example
+++ b/backendapi/.env.example
@@ -1,7 +1,8 @@
 APP_NAME=Derma Vision API
 APP_VERSION=0.1.0
 API_KEY=hackathon-demo-key
-MODEL_MODULE=app.sample_model
+CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+MODEL_MODULE=app.ai_model_adapter
 MODEL_CALLABLE=predict_image_bytes
 MODEL_VERSION=demo-v1
 MAX_IMAGE_BYTES=5242880
